--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,15 @@
             <artifactId>scalaj-http_2.12</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-swing -->
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-swing_2.12</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
-        
+
+
 
     </dependencies>
 </project>
